[package]
name = "share_assembly"
version = "0.1.0"
authors = ["Shikai Liu<lsk569937453@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.34"
aes-ctr = "0.5.0"

hex = "0.4.2"



